# PrimeCalculator

./: Cargo.toml
config/: log4rs.yaml
src/: main.rs
