[package]
name = "untitled"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log4rs = { version = "1" , features = ["all_components", "gzip","rolling_file_appender", "file_appender", "console_appender", "fixed_window_roller", "size_trigger", "yaml_format"]}
log = { version = "0", features = ["std"] }
serde_yaml = "0"

[profile.dev]
opt-level = 0               # Use slightly better optimizations.
overflow-checks = true     # Disable integer overflow checks.

[profile.release]
opt-level = 3               # Use slightly better optimizations.
overflow-checks = false     # Disable integer overflow checks.
lto = true
panic = "abort"
